# SensorSetup

./: README.md
IMU/: EB-IMU.md
IMU/EB_IMU_Matlab/: EBIMU_COM.m  plot_Coord.m
IMU/Xsense_IMU_ROS/launch/: display.launch
IMU/Xsense_IMU_ROS/param/: xsens_mti_node.yaml
PHAROS/MSG/: CMakeLists.txt
PHAROS/MSG/msg/: AntennaOffsetSet_t.msg  BSM.msg  BSMcoreData.msg  BrakeSystemStatus_t.msg  CAN_GWAY1.msg  CAN_GWAY10.msg  CAN_GWAY2.msg  CAN_GWAY4.msg  CAN_GWAY5.msg  CAN_GWAY_header_header.msg  ConnectsToList.msg  EBIMU.msg  EBIMUekf_stamped.msg  EBIMUheader.msg  EBIMUheader_header.msg  GeographicalPath.msg  ImageHeader.msg  IntersectionGeometryList.msg  IntersectionReferenceID.msg  IntersectionStateList_t.msg  LaneAttributes_t.msg  LaneList_t.msg  LaneOffset.msg  MAP.msg  MotionCommandStamped2.msg  MotionCommandStamped3.msg  MovementEventList_t.msg  NodeAttributeSetXY.msg  NodeListLL_t.msg  ObjectInfo.msg  ObjectPose.msg  OffsetSystem_t.msg  PositionalAccuracy_t.msg  RTCM.msg  RTCMheader.msg  RTCMmessageList_t.msg  Road.msg  SCBADU.msg  SCBADUheader.msg  SPAT.msg  (+17 more)
PHAROS/pharos_msgs/: package.xml
PHAROS/pharos_msgs/msg/: AccelerationSet4Way_t.msg  BSMpartII.msg  CAN_GWAY3.msg  CAN_GWAY_header.msg  EBIMUekf.msg  FullPositionVector.msg  MotionCommandStamped.msg  MovementList_t.msg  NodeListXY_t.msg  PathHistory_t.msg  Position3D.msg  Position3D_t.msg  TimeChangeDetails.msg  TravelerDataFrame__content_PR.msg  VehiclePose.msg  VehiclePoseArray.msg  Workzone_list.msg  Workzone_xy.msg  cluster_info.msg  ground_seg.msg  pointtypes.msg  pose_detect.msg  tm.msg  tms.msg
SENSOR_IMU/ebimu_driver/: CMakeLists.txt  package.xml
SENSOR_IMU/ebimu_driver/launch/: .pharos_imu.launch.swp  pharos_imu.launch
SENSOR_IMU/ebimu_driver/src/: ebimu_driver_node.cpp  ebimu_driver_parser  ebimu_driver_parser.cpp  serial_example_node.cpp
SENSOR_IMU/ebimu_matlab/: plotTransforms.m
SENSOR_LiDAR/VIS_LIDAR_FUSE/: CMakeLists.txt
SENSOR_LiDAR/VIS_LIDAR_FUSE/launch/: pixel_cloud_fusion.launch
SENSOR_LiDAR/VIS_LIDAR_FUSE/src/: pixel_cloud_fusion.cpp
SENSOR_TF/Vehicle_TF_PUB/: package.xml
SENSOR_TF/Vehicle_TF_PUB/config/: tf_config.yaml
SENSOR_TF/Vehicle_TF_PUB/launch/: vehicle_tf.launch
TF/: CMakeLists.txt
TF/config/: tf_config.yaml
TF/launch/: multimaster.launch  vehicle_tf.launch
TF/src/: pharos_tf_node.cpp
(+32 files in other folders)
